# adapter/in/Spring-Controller/src/main/java/org/ylab/controller/AuthController.java
@@ -2,7 +2,6 @@ package org.ylab.controller;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpSession;
-import lombok.RequiredArgsConstructor;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -10,7 +9,6 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
-import org.springframework.validation.BindingResult;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -19,7 +17,6 @@ import org.springframework.web.bind.annotation.RestController;
 import org.ylab.annotations.Loggable;
 import org.ylab.dto.UserDto;
 import org.ylab.entity.UserEntity;
-import org.ylab.exception.BadRequestException;
 import org.ylab.mapper.UserMapper;
 import org.ylab.marker.Marker;
 import org.ylab.user.UserService;
@@ -50,21 +47,18 @@ public class AuthController {
     }
 
     @PostMapping(path = "/login")
-    public String login(HttpServletRequest request,
-                        @RequestBody @Valid UserDto dtoToLogin,
-                        BindingResult bindingResult) {
-        if (bindingResult.hasErrors()) {
-            throw new BadRequestException(bindingResult.getGlobalError().getDefaultMessage());
-        }
+    public UserDto login(HttpServletRequest request,
+                         @RequestBody @Valid UserDto dtoToLogin) {
         Authentication authentication = authenticationManager.authenticate(
                 new UsernamePasswordAuthenticationToken(
                         dtoToLogin.getEmail(),
                         dtoToLogin.getPassword()));
+        UserEntity loggedUser = (UserEntity) authentication.getPrincipal();
         SecurityContext securityContext = SecurityContextHolder.getContext();
         securityContext.setAuthentication(authentication);
         HttpSession session = request.getSession();
         session.setAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY, securityContext);
-        return "Logged in";
+        return userMapper.toUserDto(loggedUser);
     }
 
 }
