# swagger/monitoring-service-open-api.yml
@@ -22,7 +22,7 @@ paths:
         - Readings
       summary: Get the actual readings for the current user
       security:
-        - basicAuth: []
+        - basicAuth: [ ]
       responses:
         '200':
           description: A list of readings
@@ -41,7 +41,7 @@ paths:
         - Readings
       summary: Get the readings for the current user by month
       security:
-        - basicAuth: []
+        - basicAuth: [ ]
       parameters:
         - name: date
           in: query
@@ -69,7 +69,7 @@ paths:
         - Readings
       summary: Get the history of readings for the current user
       security:
-        - basicAuth: []
+        - basicAuth: [ ]
       responses:
         '200':
           description: A list of readings
@@ -88,7 +88,7 @@ paths:
         - Meter
       summary: Create a new meter
       security:
-        - basicAuth: []
+        - basicAuth: [ ]
       requestBody:
         required: true
         content:
@@ -147,6 +147,8 @@ paths:
       tags:
         - Readings
       summary: "POST readings"
+      security:
+        - basicAuth: [ ]
       operationId: "createReadings"
       requestBody:
         content:
@@ -193,6 +195,8 @@ paths:
       tags:
         - Readings
       summary: "GET readings/history"
+      security:
+        - basicAuth: [ ]
       operationId: "getHistory"
       responses:
         "200":
@@ -200,9 +204,9 @@ paths:
           content:
             '*/*':
               schema:
-               type: "array"
-               items:
-                $ref: "#/components/schemas/ReadingDto"
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/ReadingDto"
 components:
   schemas:
     ReadingDto:
@@ -238,7 +242,7 @@ components:
           maxLength: 10
         type:
           type: string
-          enum: [ELECTRICITY, WATER, GAS]
+          enum: [ ELECTRICITY, WATER, GAS ]
         userId:
           type: integer
           format: int64
